--- a/SpheresAlg.ipynb
+++ b/SpheresAlg.ipynb
@@ -2,13 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fatal Python error: init_import_size: Failed to import the site module\n",
+      "Python runtime state: initialized\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users/andro/AppData/Local/NA-MIC/Slicer/bin/../lib/Python/Lib\\site.py\", line 73, in <module>\n",
+      "    import os\n",
+      "  File \"C:\\Users/andro/AppData/Local/NA-MIC/Slicer/bin/../lib/Python/Lib\\os.py\", line 29, in <module>\n",
+      "    from _collections_abc import _check_methods\n",
+      "  File \"C:\\Users/andro/AppData/Local/NA-MIC/Slicer/bin/../lib/Python/Lib\\_collections_abc.py\", line 12, in <module>\n",
+      "    GenericAlias = type(list[int])\n",
+      "TypeError: 'type' object is not subscriptable\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install trimesh"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'trimesh'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtrimesh\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'trimesh'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import trimesh\n",
@@ -4253,7 +4291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
